--- a/bhlt.plist
+++ b/bhlt.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://www.jingjushi.com/bhlt.ipa</string>
+                    <string>http://www.jingjushi.com/h3/bhlt.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
