--- a/bhlt.plist
+++ b/bhlt.plist
@@ -19,7 +19,7 @@
                     <key>needs-shine</key>
                     <false/>
                     <key>url</key>
-                    <string>http://jingjushi.com/app/style/images/appLogo.png</string>
+                    <string>http://www.jingjushi.com/app/style/images/appLogo.png</string>
                 </dict>
                 <dict>
                     <key>kind</key>
@@ -27,7 +27,7 @@
                     <key>needs-shine</key>
                     <false/>
                     <key>url</key>
-                    <string>http://jingjushi.com/app/style/images/appLogo.png</string>
+                    <string>http://www.jingjushi.com/app/style/images/appLogo.png</string>
                 </dict>
             </array>
             <key>metadata</key>
