--- a/bhlt.plist
+++ b/bhlt.plist
@@ -39,7 +39,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>碧海蓝天</string>
+                <string>万鸿娱乐</string>
             </dict>
         </dict>
     </array>
