--- a/bhlt.plist
+++ b/bhlt.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://www.jingjushi.com/h3/bhlt.ipa</string>
+                    <string>http://www.wh18888.com/wh/wh.0.0.1.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
