--- a/bhlt.plist
+++ b/bhlt.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://www.wh18888.com/app/wh.0.0.1.ipa</string>
+                    <string>http://www.wh58888.com/app/wh.0.0.1.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
@@ -19,7 +19,7 @@
                     <key>needs-shine</key>
                     <false/>
                     <key>url</key>
-                    <string>http://vip.wh58888.com/app/img/icon.png</string>
+                    <string>http://www.wh58888.com/app/img/icon.png</string>
                 </dict>
                 <dict>
                     <key>kind</key>
@@ -27,7 +27,7 @@
                     <key>needs-shine</key>
                     <false/>
                     <key>url</key>
-                    <string>http://vip.wh58888.com/app/img/icon.png</string>
+                    <string>http://www.wh58888.com/app/img/icon.png</string>
                 </dict>
             </array>
             <key>metadata</key>
